[project]
name = "pong-rl"
version = "0.1.0"
description = "A Pong game environment for reinforcement learning"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "pygame>=2.5.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I"] 